# kaggle_loan_approval_prediction

./: .gitignore  pyproject.toml
dataset/: dataset.md
guides/: skewness_kurtosis.md
notebook/: Untitled5.ipynb  cat_fine.ipynb  cat_fine2.ipynb  cat_test1.ipynb  discussion_2.ipynb  discussion_3.ipynb  dl.ipynb  encoder.ipynb  explore.ipynb  feat_engg1.ipynb  feat_engg2.ipynb  hyper_param_xgb.ipynb  hyper_tuning.ipynb  imbalance.ipynb  lgbm.ipynb  some_discussion1.ipynb  submit.ipynb  train.ipynb
notebook/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
notebook/catboost_info/test/: events.out.tfevents
