[tool.poetry]
name = "loan-approval-prediction"
version = "0.1.0"
description = ""
authors = ["SurajAiri <surajairi.ml@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
xgboost = "^2.1.1"
tensorflow = "^2.17.0"
keras-tuner = "^1.4.7"
imbalanced-learn = "^0.12.4"
lightgbm = "^4.5.0"
catboost = "^1.2.7"
hillclimbers = "^0.1.4"
optuna = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
